working with some bug in sg api
